fix(mail(css)): yellow flags for more visibility

--- a/UI/WebServerResources/scss/views/MailerUI.scss
+++ b/UI/WebServerResources/scss/views/MailerUI.scss
@@ -30,6 +30,10 @@
   }
 }
 
+.sg-icon-star {
+  color: $colorYellow700;
+}
+
 // Message view header
 // Could be made into a more generic component
 // ----------------------------------------------------------------------------
